# FFMPEG

./: README.md
ffmpegplayer/app/: CMakeLists.txt  build.gradle
ffmpegplayer/app/src/androidTest/java/kc/com/ffmpegplayer/: ExampleInstrumentedTest.java
ffmpegplayer/app/src/main/: AndroidManifest.xml
ffmpegplayer/app/src/main/cpp/: JavaCallHelper.cpp  JavaCallHelper.h  ffmpeg_player.cpp  ffmpeg_player.h  macro.h  native-lib.cpp
ffmpegplayer/app/src/main/java/kc/com/ffmpegplayer/: FfmpegPlayer.java  MainActivity.java
ffmpegplayer/app/src/test/java/kc/com/ffmpegplayer/: ExampleUnitTest.java
ffmpegplayer/gradle/wrapper/: gradle-wrapper.properties
